# slm

./: .gitignore  README.md  setup.cfg  setup.py  slm.yaml.example
example/conf/: slm.yaml
example/info/: logininfo.yaml
src/slm/: main.py  manager.py  setting.py
src/slm/command/: __init__.py  base_command.py  login_command.py  ls_command.py  reload_command.py  show_command.py
src/slm/login_info/: login_info.py  login_info_manager.py
src/slm/util/: tmux_util.py
