[metadata]
name = slm
version = 0.1.1
author = fortime
author_email = palfortime@gmail.com
description = slm - ssh login manager
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/fortime/slm'
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    PyYAML >=3.12
    libtmux >=0.7.7
    treelib >=1.5.1

[options.packages.find]
where = src
